# C-Wire

./: .gitignore  LICENCE.txt  README(à modifier).md  README.md  c-wire.sh  fnuse.c  graph.gn  graph.gnuplot  makefile  remis.sh  test.sh
codeC/: makefile
codeC/include/: AVL.h  CWIRE_colors.h  CWIRE_debug.h  CWIRE_def.h  CWIRE_error.h  CWIRE_file.h  CWIRE_math.h  Station.h
codeC/src/: AVL.c  CWIRE_debug.c  CWIRE_error.c  CWIRE_file.c  CWIRE_math.c  Station.c  main.c
